--- a/ponder/v3_6/team04.html
+++ b/ponder/v3_6/team04.html
@@ -100,10 +100,8 @@
                 about the structure of your app I would recommend that you still
                 follow the recommendation below.
               </p>
-              <section class="hint">
-                <input type="checkbox" />
-                <h3>Instructor's recommendation</h3>
-                <i></i>
+              <details>
+                <summary>Instructor's recommendation</summary>
                 <div>
                   <p>SPAs can be great in the right circumstances:</p>
                   <ul>
@@ -122,14 +120,15 @@
                   <p>But they do come with a few drawbacks:</p>
                   <ul>
                     <li>
-                      Initial load times are often higher...people are most
+                      Initial load times are often higher because you usually
+                      send a lot of Javascript to power a SPA. People are most
                       sensitive to initial load times...first impressions...
                     </li>
                     <li>SPAs are more complex than multipage apps</li>
                     <li>
                       SPAs often require more processing power on the
                       client...so older less powerful computers and phones might
-                      struggle.
+                      struggle. (ie the devices that 75% of the world is using)
                     </li>
                     <li>
                       You lose some great native features of browsers like
@@ -172,7 +171,8 @@
                     news is that what we have done already follows that model.
                   </p>
                 </div>
-              </section>
+              </details>
+
               <!-- END STEP -->
             </li>
 
