--- a/ponder/v3_6/team05.html
+++ b/ponder/v3_6/team05.html
@@ -241,8 +241,8 @@
                 to Netlify and pull up this project. Then goto "Site
                 Settings-&gt;Environment Variables". Add a new variable. The key
                 should be "VITE_SERVER_URL", and the value should be
-                "https://wdd330-backend.onrender.com". We will be using the same
-                value in all contexts.
+                "https://wdd330-backend.onrender.com/". We will be using the
+                same value in all contexts.
               </p>
 
               <!-- END STEP -->
