--- a/resources/syllabus-outside.html
+++ b/resources/syllabus-outside.html
@@ -25,9 +25,9 @@
         </p>
         <h2>Prerequisites</h2>
         <p>
-          <strong>WDD 230 -</strong> It is expected that you have learned and
-          mastered the information made available to you in WDD 230 and its
-          prerequisite courses. If you feel rusty, the following is a more
+          <strong>WDD 230 or 231 -</strong> It is expected that you have learned
+          and mastered the information made available to you in WDD 230/231 and
+          its prerequisite courses. If you feel rusty, the following is a more
           specific list of topics you would have been introduced to in those
           courses that will be important that you are comfortable with, and some
           sources to use for review before the course begins.
