change lint config file name

--- a/ponder/v3_6/team01.html
+++ b/ponder/v3_6/team01.html
@@ -210,7 +210,7 @@
                   </p>
                   <p>
                     Try running the linter now. What did you see? Have the
-                    driver open up the <kbd>.eslintrc.json</kbd> file. You may
+                    driver open up the <kbd>eslint.config.js</kbd> file. You may
                     have noticed that one of the errors it is complaining about
                     is that your quotes should all be single. You might be
                     saying to yourself..."why does <em>that</em> matter?" Well,
@@ -220,12 +220,12 @@
                     Decide as a team whether you would like to use single or
                     double quotes. Then find the line that looks like this:
                     <code>"quotes":["error", "single"]</code> in the
-                    <kbd>.eslintrc.json</kbd> file. If you want single quotes
+                    <kbd>eslint.config.js</kbd> file. If you want single quotes
                     then make no changes. If you want double quotes then change
                     the word "single" to "double".
                   </p>
                   <p class="callout">
-                    The <kbd>.eslintrc.json</kbd> file belongs to the team. If
+                    The <kbd>eslint.config.js</kbd> file belongs to the team. If
                     your team disagrees with any of the rules that are being
                     enforced, change them! Just make sure that all the team
                     members are on board with the changes. If you do decide to
